Fix issues overlapping the content and logo with  desktop nav bar in about page

--- a/css/styles.css
+++ b/css/styles.css
@@ -665,6 +665,7 @@ footer {
     width: 100%;
     background-color: #272a31;
     position: fixed;
+    z-index: 1111;
   }
 
   .social-bar-list {
@@ -723,6 +724,7 @@ footer {
     background-color: #fff;
     top: 2em;
     box-shadow: var(--color3) 0 2px 8px 0;
+    z-index: 11111111111;
   }
 
   .nav-links {
